18145
Scalac depends on order of given source files when compiling scala library. The build fails, if the sources are unordered but succeeds when sorted before. 

scalac is the current "starr" compiler. Its Bundle-Version is "2.11.0-20121228-195556-b7840d6b41". 

I found this issue, while doing some experiments of building scala with SBuild, a Scala based buildsystem (http://sbuild.tototec.de) instead of SABBUS (ant). I first used a version, were the source files are collected from the filesystem and are feeded to the compiler as-is (see attachment "scalac-args-unsorted"). I got the following error:
```scala
/home/lefou/work/tototec/sbuild/build-foreign-project-examples/scala.git/src/library/scala/Predef.scala:72: error: illegal cyclic reference involving object Predef
object Predef extends LowPriorityImplicits with DeprecatedPredef {
                      ^
one error found
```


Then, I sorted the source files alphabetically (see attachment "scalac-args-sorted"), and the error vanished.

Note, that I can not produce the same issue with SABBUS, as it always collects the source files alphabetically sorted.
